on openmp works fine

--- a/c_omp/meson.build
+++ b/c_omp/meson.build
@@ -4,6 +4,9 @@ sources = [
     'c_omp.c'
 ]
 
-deps = [dependency('openmp')]
+cc = meson.get_compiler('c')
+m_dep = cc.find_library('m', required : false)
+
+deps = [dependency('openmp'), m_dep]
 
 executable('sor', sources, dependencies: deps)
