--- a/c_pthreads/Makefile
+++ b/c_pthreads/Makefile
@@ -1,9 +1,9 @@
-CC = mpicc
-CFLAGS = -Wall -Wextra
-LDFLAGS = -lm
+CC = gcc
+CFLAGS = -Wall -Wextra -O3
+LDFLAGS = -lm -pthread
 BUILD_DIR = build
 TARGET = sor
-SRCS = c_mpi.c 
+SRCS = c_pthreads.c 
 
 OBJS = $(SRCS:%.c=$(BUILD_DIR)/%.o)
 
