--- a/c_omp/Makefile
+++ b/c_omp/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -O3
+CFLAGS = -O3 
 LDFLAGS = -lm -fopenmp
 BUILD_DIR = build
 TARGET = sor
@@ -7,11 +7,8 @@ SRCS = c_omp.c
 
 OBJS = $(SRCS:%.c=$(BUILD_DIR)/%.o)
 
-$(TARGET): $(OBJS)
-	$(CC) $(OBJS) -o $(BUILD_DIR)/$(TARGET) $(LDFLAGS)
+$(TARGET): 
+	$(CC) $(CFLAGS) $(SRCS) -o $(BUILD_DIR)/$(TARGET) $(LDFLAGS)
 
-$(BUILD_DIR)/%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
-	
 clean:
 	rm -rf $(BUILD_DIR) $(TARGET)
